--- a/package.json
+++ b/package.json
@@ -40,9 +40,9 @@
     "typescript": "^4.8.2"
   },
   "dependencies": {
-    "@alien-worlds/alienworlds-api-common": "^0.0.63",
-    "@alien-worlds/api-core": "^0.0.97",
-    "@alien-worlds/api-history-tools": "^0.0.108",
+    "@alien-worlds/alienworlds-api-common": "^0.0.64",
+    "@alien-worlds/api-core": "^0.0.98",
+    "@alien-worlds/api-history-tools": "^0.0.110",
     "@types/cron": "^2.0.1",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/ms": "^0.7.31",
@@ -50,6 +50,7 @@
     "cron": "^2.3.0",
     "jsonwebtoken": "^9.0.0",
     "ms": "^2.1.3",
+    "nanoid": "3",
     "reflect-metadata": "^0.1.13"
   }
 }
