--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "reader": "node build/reader/index.js",
     "filter": "node build/filter/index.js",
     "processor": "node build/processor/index.js",
-    "updater": "node build/leaderboard-updater/index.js",
+    "leaderboard-writer": "node build/leaderboard-writer/index.js",
     "lint": "eslint . --ext .ts",
     "lint-fix": "eslint . --ext .ts --fix",
     "format-check": "prettier --check \"src/\"",
@@ -41,9 +41,9 @@
     "typescript": "^4.8.2"
   },
   "dependencies": {
-    "@alien-worlds/alienworlds-api-common": "^0.0.64",
-    "@alien-worlds/api-core": "^0.0.98",
-    "@alien-worlds/api-history-tools": "^0.0.110",
+    "@alien-worlds/alienworlds-api-common": "^0.0.68",
+    "@alien-worlds/api-core": "^0.0.101",
+    "@alien-worlds/api-history-tools": "^0.0.113",
     "@types/cron": "^2.0.1",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/ms": "^0.7.31",
