--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
     "clean": "rm -rf ./build",
     "build": "yarn clean && tsc -b",
     "build:prod": "yarn clean && tsc --project tsconfig.build.json",
-    "broadcast": "node build/broadcast/internal/index.js",
-    "broadcast:external": "node build/broadcast/external/index.js",
-    "cron": "node build/cron/index.js",
+    "broadcast": "node build/broadcast/index.js",
     "boot": "node build/bootstrap/index.js",
     "reader": "node build/reader/index.js",
     "filter": "node build/filter/index.js",
@@ -41,8 +39,11 @@
     "typescript": "^4.8.2"
   },
   "dependencies": {
+    "@alien-worlds/aw-api-common-atomicassets": "^0.0.8",
     "@alien-worlds/aw-api-common-leaderboard": "^0.0.19",
-    "@alien-worlds/aw-history-starter-kit": "^0.0.7",
+    "@alien-worlds/aw-contract-notify-world": "^0.0.1",
+    "@alien-worlds/aw-history-starter-kit": "^0.0.10",
+    "@alien-worlds/aw-storage-redis": "^0.0.7",
     "@types/cron": "^2.0.1",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/ms": "^0.7.31",
