--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "jsonwebtoken": "^9.0.0",
     "ms": "^2.1.3",
     "nanoid": "3",
-    "reflect-metadata": "^0.1.13"
+    "reflect-metadata": "^0.1.13",
+    "ws": "^8.14.2"
   }
 }
